# ruaccent

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
ruaccent/: __init__.py  accent_model.py  char_tokenizer.py  omograph_model.py  ruaccent.py  rule_accent_engine.py  stress_usage_model.py  text_postprocessor.py  text_preprocessor.py  text_split.py  yo_homograph_model.py  yo_omograph_model.py
ruaccent/rumorph/: __init__.py  lemmatizer.py  morph_precitor.py  rumorph.py  tags_precitor.py
